# playstation-reddit-sentiment-analysis

./: .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env-example  Dockerfile  pyproject.toml
backend/data/analyzed/: analyzed_reddit_data.json
backend/data/processed/: processed_reddit_data.json
backend/src/api/: main.py
backend/src/processing/: data_cleaner.py  database_handler.py
backend/src/scraping/: database_handler.py  reddit_scraper.py
backend/src/sentiment_analysis/: sentiment_analyzer.py
data/analyzed/: analyzed_reddit_data.json
data/processed/: processed_reddit_data.json
data/raw/: reddit_data.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/pages/MainPage/: MainPage.tsx
frontend/src/components/ui/Navbar/: Navbar.tsx
llm/: llm_handler.py
reddit-data-collection/: mongodb_handler.py  reddit_api.py
scripts/: run_pipeline.sh
sentiment-analysis/: mongodb_handler.py  process_reddit_data.py  sentiment_analysis.py
src/api/: main.py
src/processing/: data_cleaner.py
src/scraping/: reddit_scraper.py
src/sentiment_analysis/: ollama_config.py  sentiment_analyzer.py
